--- a/src/app/pages/school/students/student-registration/student-registration.component.html
+++ b/src/app/pages/school/students/student-registration/student-registration.component.html
@@ -43,7 +43,7 @@
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" id="close-modal" (click)="dismissModal()"></button>
         </div>
         
-        <div class="col-xxl-12">
+        <!-- <div class="col-xxl-12">
             <div class="card">
                 <div class="card-body modal-body">
                     <div class="row">
@@ -166,6 +166,130 @@
                         <div class="col-md-9">
                           <div [ngbNavOutlet]="verticalNav"></div>
                         </div>
+                    </div>
+                </div>
+            </div>
+        </div> -->
+
+        <div class="col-xxl-12">
+            <div class="card">
+                <div class="card-body modal-body">
+                    <ul ngbNav #Justify="ngbNav" [activeId]="1" class="nav nav-tabs nav-tabs-custom nav-primary nav-justified mb-3">
+                        <li [ngbNavItem]="1" *ngIf="!isBatchCreateMode">
+                            <a ngbNavLink class="mb-2"><span class="d-sm-block">General</span></a>
+                            <ng-template ngbNavContent>
+                              <div class="mb-0">
+                                  <form  class="tablelist-form" autocomplete="off" [formGroup]="studentForm">
+                                        <div class="mb-3">
+                                            <label for="familyName" class="form-label">Family Name <span class="text-danger">*</span></label>
+                                            <input  type="text" id="familyName" class="form-control" placeholder="Enter Family Name" formControlName="familyName" required [ngClass]="{ 'is-invalid': submitted && fStudent['familyName'].invalid }">
+                                            <div class="invalid-feedback">Family name is required</div>
+                                        </div>
+                                        <div class="mb-3">
+                                            <label for="givenNames" class="form-label">Given Names <span class="text-danger">*</span></label>
+                                            <input  type="text" id="givenNames" class="form-control" placeholder="Enter Given Names" formControlName="givenNames" required [ngClass]="{ 'is-invalid': submitted && fStudent['givenNames'].invalid }">
+                                            <div class="invalid-feedback">Given name(s) is(are) required</div>
+                                        </div>
+                                        <div class="mb-3">
+                                            <label class="form-label mb-0">Date Of Birth <span class="text-danger">*</span></label>
+                                            <input class="form-control flatpickr-input" type="text" mwlFlatpickr [altInput]="true" [convertModelValue]="true" altFormat="F j, Y" dateFormat="Y-m-d" required formControlName="dateOfBirth" [ngClass]="{ 'is-invalid': submitted && fStudent['dateOfBirth'].invalid }" placeholder="Select Date of Birth" />
+                                            <div class="invalid-feedback">Date of birth is required</div>
+                                         </div>
+                                         <div class="mb-3">
+                                            <label for="sex" class="form-label">Gender <span class="text-danger">*</span></label>
+                                            <select id="sex" class="form-select" formControlName="sex" [ngClass]="{ 'is-invalid': submitted && fStudent['sex'].errors }">
+                                              <option [ngValue]="null" disabled selected>Select Gender </option>
+                                              <option *ngFor="let sex of sexOptions" [value]="sex.dataCode">{{ sex.text }}</option>
+                                            </select>
+                                            <div class="invalid-feedback">Sex is required</div>
+                                        </div>
+                                        <div class="mb-3">
+                                            <label for="admissionNumber" class="form-label">Admission Number</label>
+                                            <input  type="text" id="admissionNumber" class="form-control" placeholder="Enter Admission Number" formControlName="admissionNumber">
+                                        </div>
+                                    </form>
+                              </div>
+                            </ng-template>
+                        </li>
+                        <li [ngbNavItem]="1" [destroyOnHide]="false" *ngIf="isBatchCreateMode">
+                            <a ngbNavLink class="mb-2"><span class="d-sm-block">Batch Upload</span></a>
+                            <ng-template ngbNavContent>
+                                <div class="col-sm-12">
+                                    <ul class="list-inline user-chat-nav text-end mb-0">
+                                        <li class="list-inline-item m-0">
+                                            <div class="dropdown" ngbDropdown>
+                                                <button class="btn btn-ghost-secondary btn-icon material-shadow-none arrow-none d-block" type="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false" ngbDropdownToggle>
+                                                    <i-feather name="info" class="icon-sm"></i-feather>
+                                                </button>
+                                                <div class="dropdown-menu dropdown-menu-end" ngbDropdownMenu>
+                                                    <a class="dropdown-item" href="javascript:void(0);" (click)="downloadSampleTemplate()"><i class="ri-file-excel-2-line align-bottom text-muted me-2 float-start"></i>Template </a>
+                                                </div>
+                                            </div>
+                                        </li>
+                                    </ul>
+                                </div>
+                              <app-excel-import (data)="handleBatchUpload($event)" ></app-excel-import>
+                            </ng-template>
+                        </li>   
+                        <li [ngbNavItem]="2" *ngIf="!isBatchCreateMode">
+                            <a ngbNavLink class="mb-2"><span class="d-sm-block">Address</span></a>
+                            <ng-template ngbNavContent>
+                                <form autocomplete="off" class="tablelist-form" [formGroup]="addressForm">
+                                    <div class="mb-3">
+                                        <label class="form-label">Country</label>
+                                        <ng-select [items]="countries" bindLabel="name" id="country" bindValue="id" formControlName="countryId" placeholder="Select a country"></ng-select>
+                                    </div>
+                                    <div class="mb-3">
+                                        <label for="addressLine1" class="form-label">Address Line 1</label>
+                                        <input type="text" class="form-control" id="addressLine1" placeholder="Enter Address Line 1" formControlName="addressLine1">
+                                    </div>
+                                    <div class="mb-3">
+                                        <label for="addressLine2" class="form-label">Address Line 2</label>
+                                        <input type="text" class="form-control" id="addressLine2" placeholder="Enter Address Line 2" formControlName="addressLine2">
+                                    </div>
+                                    <div class="mb-3">
+                                        <label for="postalCode" class="form-label">Postal Code</label>
+                                        <input type="text" class="form-control" id="postalCode" placeholder="Enter Postal Code" formControlName="postalCode">
+                                    </div>
+                                    <div id="newForm" style="display: none;"></div>
+                                </form>
+                            </ng-template>
+                        </li>
+                        <li [ngbNavItem]="isBatchCreateMode ? 2 : 3" *ngIf="isCreateMode">
+                            <a ngbNavLink class="mb-2"><span class="d-sm-block">Enrollment</span></a>
+                            <ng-template ngbNavContent>
+                                <form autocomplete="off" class="tablelist-form" [formGroup]="enrollmentForm">
+                                    <div class="mb-0">
+                                        <div class="mb-3">
+                                            <label class="form-label mb-0">Auto Enroll <span class="text-danger">*</span></label>
+                                            <select class="form-select" aria-label=".form-select-sm" formControlName="autoEnroll" [ngClass]="{ 'is-invalid': submitted && fEnrollment['autoEnroll'].invalid }">
+                                                <option selected [ngValue]="null">Select Option</option>
+                                                <option [ngValue]="true">Yes</option>
+                                                <option [ngValue]="false">No</option>
+                                            </select>
+                                            <div class="invalid-feedback" *ngIf="submitted && fEnrollment['autoEnroll'].invalid">Please select an option</div>
+                                        </div>
+                                        <div class="mb-3">
+                                            <label class="form-label">Academic Year</label>
+                                            <ng-select [items]="academicYears" bindLabel="name" id="academicYear" bindValue="id" formControlName="academicYearId" placeholder="Select Academic Year" [ngClass]="{ 'is-invalid': submitted && fEnrollment['academicYearId'].invalid }"></ng-select>
+                                            <div class="invalid-feedback">Please select an academic term</div>
+                                        </div>
+                                        <div class="mb-3">
+                                            <label class="form-label">Class</label>
+                                            <ng-select [items]="classes" bindLabel="name" id="class" bindValue="id" formControlName="classId" placeholder="Select Class" [ngClass]="{ 'is-invalid': submitted && fEnrollment['classId'].invalid }"></ng-select>
+                                            <div class="invalid-feedback">Please select a class</div>
+                                        </div>
+                                        <div class="mb-3">
+                                            <label class="form-label">Class Section</label>
+                                            <ng-select [items]="classSections" bindLabel="name" id="classSections" bindValue="id" formControlName="classSectionId" placeholder="Select Class Section"></ng-select>
+                                        </div>
+                                    </div>
+                                </form>
+                            </ng-template>
+                        </li>
+                    </ul>
+                    <div class="tab-content  text-muted">
+                        <div [ngbNavOutlet]="Justify"></div>
                     </div>
                 </div>
             </div>
