--- a/src/app/shared/generic-paginated-app-table/generic-paginated-app-table.component.html
+++ b/src/app/shared/generic-paginated-app-table/generic-paginated-app-table.component.html
@@ -55,7 +55,7 @@
                 </tr>
                 <tr *ngIf="data.length === 0 && !loading">
                     <td [attr.colspan]="headers.length + (showRowSelect ? 2 : 1) + (showActions ? 1 : 0)" class="text-center py-3">
-                        No records found
+                        No records to display
                     </td>
                 </tr>
                 <tr *ngIf="loading">
