--- a/src/app/layouts/sidebar/sidebar.component.html
+++ b/src/app/layouts/sidebar/sidebar.component.html
@@ -28,9 +28,9 @@
   <div class="dropdown sidebar-user m-1 rounded">
     <button type="button" class="btn material-shadow-none" id="page-header-user-dropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
         <span class="d-flex align-items-center gap-2">
-            <img class="rounded header-profile-user" src="assets/images/users/avatar-1.jpg" alt="Header Avatar">
+            <img class="rounded header-profile-user" src="assets/images/users/user-dummy-img.jpg" alt="Header Avatar">
             <span class="text-start">
-                <span class="d-block fw-medium sidebar-user-name-text">Anna Adame</span>
+                <span class="d-block fw-medium sidebar-user-name-text">Current User</span>
                 <span class="d-block fs-14 sidebar-user-name-sub-text"><i class="ri ri-circle-fill fs-10 text-success align-baseline"></i> <span class="align-middle">Online</span></span>
             </span>
         </span>
