--- a/src/app/pages/school/students/student-enrollments/student-enrollments.component.html
+++ b/src/app/pages/school/students/student-enrollments/student-enrollments.component.html
@@ -178,7 +178,7 @@
                                     <div class="mb-3">
                                         <ng-select [ngModelOptions]="{standalone: true}" [items]="subjects" bindLabel="name" multiple="true" [(ngModel)]="selectedStudentSelectedSubjects" bindValue="id" placeholder="Select Subjects"></ng-select>
                                     </div>
-                                    <div class="card">
+                                    <div class="card" id="student-subjects">
                                         <generic-app-table 
                                         [headers]="selectedStudentSubjectHeaders" 
                                         [data]="selectedStudentSubjects" 
@@ -204,10 +204,9 @@
         <div class="modal-footer">
             <div class="hstack gap-2 justify-content-end">
                 <button [disabled]="selectedStudentSelectedSubjects.length < 1" (click)="onSelectedStudentSaveClick()" class="btn btn-primary px-3"><i class=" ri-save-2-line align-bottom me-1"></i> Save</button>
-                <button [disabled]="selectedStudentSubjects.length < 1" (click)="onCreateStudentSubjects()" class="btn btn-info px-3"><i class="ri-printer-line align-bottom me-1"></i> Print</button>
+                <button [disabled]="selectedStudentSubjects.length < 1" (click)="onPrint()" class="btn btn-info px-3"><i class="ri-printer-line align-bottom me-1"></i> Print</button>
             </div>
         </div>
      </div>
     </ng-template>
-
 </div>
