feat: Update print button label to clarify functionality for printing subjects

--- a/src/app/pages/school/students/student-enrollments/student-enrollments.component.html
+++ b/src/app/pages/school/students/student-enrollments/student-enrollments.component.html
@@ -204,7 +204,7 @@
         <div class="modal-footer">
             <div class="hstack gap-2 justify-content-end">
                 <button [disabled]="selectedStudentSelectedSubjects.length < 1" (click)="onSelectedStudentSaveClick()" class="btn btn-primary px-3"><i class=" ri-save-2-line align-bottom me-1"></i> Save</button>
-                <button [disabled]="selectedStudentSubjects.length < 1" (click)="onPrint()" class="btn btn-info px-3"><i class="ri-printer-line align-bottom me-1"></i> Print</button>
+                <button [disabled]="selectedStudentSubjects.length < 1" (click)="onPrint()" class="btn btn-info px-3"><i class="ri-printer-line align-bottom me-1"></i> Print Subjects</button>
             </div>
         </div>
      </div>
