--- a/src/app/layouts/topbar/topbar.component.html
+++ b/src/app/layouts/topbar/topbar.component.html
@@ -163,8 +163,8 @@
                         <!-- item-->
                         <h6 class="dropdown-header">Welcome {{userData.familyName}}!</h6>
                         <a class="dropdown-item" routerLink="/"><i class="mdi mdi-account-circle-outline text-muted fs-16 align-middle me-1"></i> <span class="align-middle">Profile</span></a>
-                        <a class="dropdown-item" routerLink="/"><i class="mdi mdi-message-text-outline text-muted fs-16 align-middle me-1"></i> <span class="align-middle">Messages</span></a>
-                        <a class="dropdown-item" routerLink="/"><i class="mdi mdi-calendar-check-outline text-muted fs-16 align-middle me-1"></i> <span class="align-middle">TaskBoard</span></a>
+                        <!-- <a class="dropdown-item" routerLink="/"><i class="mdi mdi-message-text-outline text-muted fs-16 align-middle me-1"></i> <span class="align-middle">Messages</span></a>
+                        <a class="dropdown-item" routerLink="/"><i class="mdi mdi-calendar-check-outline text-muted fs-16 align-middle me-1"></i> <span class="align-middle">TaskBoard</span></a> -->
                         <a class="dropdown-item" routerLink="/"><i class="mdi mdi-help-circle-outline text-muted fs-16 align-middle me-1"></i> <span class="align-middle">Help</span></a>
                         <div class="dropdown-divider"></div>
                         <a class="dropdown-item" routerLink="/general/institution"><i class="bx bxs-school text-muted fs-16 align-middle me-1"></i> <span class="align-middle">Create</span></a>
